--- a/examples/config2.yaml
+++ b/examples/config2.yaml
@@ -5,22 +5,22 @@ style:
   label_stroke_width: 0px
   link_stroke_color: 'grey'
   link_stroke_width: 1
-  map_background_color: 'lightgrey'
+  area_background_color: 'lightgrey'
   section_stroke_width: 1
   section_fill_color: '#99B898'
   section_stroke_color: '#2A363B'
   background_color: '#2A363B'
 
-maps:
-# total map area
-- map:
+areas:
+# total area area
+- area:
     # start and end addresses are optional
     # They can be specified to force drawing a region
     # that doesn't contain any segments
     # start: 0x20000000
     # end:   0x20004000
 
-    # Specify the position of the map and its size here
+    # Specify the position of the area and its size here
     x: 30
     y: 30
     size_x: 300
@@ -38,7 +38,7 @@ maps:
       overrrides:
       - sections: [ Peripheral ]
         section_fill_color: '#FF847C'
-- map:
+- area:
     x: 500
     y: 30
     size_x: 200
@@ -61,7 +61,7 @@ maps:
         - sections: [ TPIU ]
           section_fill_color: '#E84A5F'
 
-- map:
+- area:
     x: 500
     y: 280
     size_x: 200
@@ -76,7 +76,7 @@ maps:
       link_stroke_width: 1
       section_stroke_width: 3
 
-- map:
+- area:
     x: 500
     y: 730
     size_x: 200
@@ -92,7 +92,7 @@ maps:
         - sections: [ Bit band region ]
           section_fill_color: '#FF847C'
 
-- map:
+- area:
     x: 500
     y: 980
     size_x: 200
