--- a/examples/map.yaml
+++ b/examples/map.yaml
@@ -1,97 +1,97 @@
 map:
 - address: 0x20000000
   size:    0x20000000
-  name: SRAM Area
+  id: SRAM Area
   type: area
 - address: 0x40000000
   size:    0x20000000
-  name: Peripheral
+  id: Peripheral
   type: area
 - address: 0x60000000
   size:    0x40000000
-  name: External RAM
+  id: External RAM
   type: area
 - address: 0xA0000000
   size:    0x40000000
-  name: External Device
+  id: External Device
   type: area
 - address: 0xE0000000
   size:    0x08000000
-  name: Private Periph. Bus - Internal
+  id: Private Periph. Bus - Internal
   type: area
 - address: 0xE8000000
   size:    0x08000000
-  name: Private Periph. Bus - External
+  id: Private Periph. Bus - External
   type: area
 - address: 0xF0000000
   size:    0x08000000
-  name: Vendor Specific
+  id: Vendor Specific
   type: area
 
 - address: 0xE8040000
   size:    0x00001000
-  name: TPIU
+  id: TPIU
   type: section
 - address: 0xE8041000
   size:    0x00001000
-  name: ETM
+  id: ETM
   type: section
 - address: 0xE8042000
   size:    0x00001000
-  name: External PPB
+  id: External PPB
   type: section
 - address: 0xE8043000
   size:    0x00001000
-  name: ROM Table
+  id: ROM Table
   type: section
 
 - address: 0xE0000000
   size:    0x00010000
-  name: ITM
+  id: ITM
   type: section
 - address: 0xE0010000
   size:    0x00010000
-  name: DWT
+  id: DWT
   type: section
 - address: 0xE0020000
   size:    0x00010000
-  name: FPB
+  id: FPB
   type: section
 - address: 0xE0030000
   size:    0x000B0000
-  name: Reserved
+  id: Reserved
   type: section
 - address: 0xE00E0000
   size:    0x00010000
-  name: NVIC
+  id: NVIC
   type: section
 - address: 0xE00F0000
   size:    0x00010000
-  name: NVIC
+  id: NVIC
   type: section
 
 - address: 0x20000000
   size:    0x00100000
-  name: Bit band region
+  id: Bit band region
   type: section
 - address: 0x20100000
   size:    0x01F00000
-  name: Bit
+  id: Bit
   type: section
 - address: 0x22000000
   size:    0x01000000
-  name: Bit band alias
+  id: Bit band alias
   type: section
 
 - address: 0x40000000
   size:    0x00100000
-  name: Bit band region
+  id: Bit band region
   type: section
 - address: 0x40100000
   size:    0x01F00000
-  name: Bit
+  id: Bit
   type: section
 - address: 0x42000000
   size:    0x01000000
-  name: Bit band alias
+  id: Bit band alias
   type: section
