--- a/examples/link_example_config.yaml
+++ b/examples/link_example_config.yaml
@@ -15,7 +15,7 @@ style:
   stroke-width: 1
   text-stroke: 'black'
   text-stroke-width: 0
-  font_type: 'Helvetica'
+  font-type: 'Helvetica'
 
 areas:
 - area:
