--- a/examples/link_example_config.yaml
+++ b/examples/link_example_config.yaml
@@ -18,6 +18,7 @@ style:
   font-type: 'Helvetica'
   break-type: '~'
   break-size: 100
+
 areas:
 - area:
     title: 'Full Memory Map'
@@ -55,7 +56,7 @@ areas:
         fill: *pastel_red
 
 - area:
-    title: 'Sections Link Example'
+    title:
     pos: [ 400, 330 ]
     size: [ 200, 300 ]
     range: [0x40000000, 0x43000000]
