--- a/examples/stm32f103_map.yaml
+++ b/examples/stm32f103_map.yaml
@@ -62,6 +62,13 @@ map:
     address: 0x40000800
     size:    0x00000400
     type:    area
+
+  - id: Reserved1
+    address: 0x40000C00
+    size:    0x1c00
+    type:    area
+    flag:    break
+
   - id:      RTC
     address: 0x40002800
     size:    0x00000400
@@ -166,6 +173,11 @@ map:
     address: 0x40013800
     size:    0x00000400
     type:    area
+  - id: Reserved2
+    address: 0x40013C00
+    size:    0xc400
+    type:    area
+    flag:    break
   - id:      DMA
     address: 0x40020000
     size:    0x00000400
