--- a/examples/stm32f103_map.yaml
+++ b/examples/stm32f103_map.yaml
@@ -1,4 +1,34 @@
 map:
+  - id: Aliased
+    address: 0x00000000
+    size:    0x08000000
+    type: area
+
+  - id: Flash Memory
+    address: 0x08000000
+    size:    0x0001FFFF
+    type: area
+  - id: Reserved0
+    address: 0x0801FFFF
+    size:    0x1F7FD001
+    type: area
+    #flags: break
+
+  - id: System Memory
+    address: 0x1FFFF000
+    size:    0x00000800
+    type: area
+
+  - id: Option Bytes
+    address: 0x1FFFF800
+    size:    0x0000000F
+    type: area
+  - id: Reserved00
+    address: 0x1FFFF80F
+    size:    0x00000800
+    type: area
+
+
   - id:      none
     address: 0x00000000
     size:    0x20000000
@@ -67,7 +97,6 @@ map:
     address: 0x40000C00
     size:    0x1c00
     type:    area
-    flag:    break
 
   - id:      RTC
     address: 0x40002800
@@ -81,10 +110,22 @@ map:
     address: 0x40003000
     size:    0x00000400
     type:    area
+
+  - id: Reserved2
+    address: 0x40003400
+    size:    0x00000400
+    type:    area
+
   - id:      SPI2
     address: 0x40003800
     size:    0x00000400
     type:    area
+
+  - id: Reserved3
+    address: 0x40003C00
+    size:    0x00000800
+    type:    area
+
   - id:      USART2
     address: 0x40004400
     size:    0x00000400
@@ -93,6 +134,12 @@ map:
     address: 0x40004800
     size:    0x00000400
     type:    area
+
+  - id: Reserved4
+    address: 0x40004C00
+    size:    0x00000800
+    type:    area
+
   - id:      I2C1
     address: 0x40005400
     size:    0x00000400
@@ -113,14 +160,26 @@ map:
     address: 0x40006400
     size:    0x00000400
     type:    area
+
+  - id: Reserved5
+    address: 0x40006800
+    size:    0x00000400
+    type:    area
+
   - id:      BKP
     address: 0x40006C00
     size:    0x00000400
     type:    area
-  - id:      POWER
+  - id:      PWR
     address: 0x40007000
     size:    0x00000400
     type:    area
+
+  - id: Reserved6
+    address: 0x40007400
+    size:    0x00008C00
+    type:    area
+
   - id:      AFIO
     address: 0x40010000
     size:    0x00000400
@@ -149,6 +208,13 @@ map:
     address: 0x40011800
     size:    0x00000400
     type:    area
+
+  - id: Reserved7
+    address: 0x40011C00
+    size:    0x00000800
+    type:    area
+
+
   - id:      ADC1
     address: 0x40012400
     size:    0x00000400
